Compiler_new_ws/Short_Hand/src/parser.output
Terminals unused in grammar

    ETOK
    WHILE


Grammar

    0 $accept: PROGRAMME_RULE $end

    1 PROGRAMME_RULE: MODULE_PREAMBLE_RULE DECLARATION_STATEMENT_LIST_RULE FUNCTION_LIST_RULE LOGIC_BLOCK

    2 MODULE_PREAMBLE_RULE: ε
    3                     | MODULE_PREAMBLE_RULE PACKAGE_DECLARATION
    4                     | MODULE_PREAMBLE_RULE MODULE_DECLARATION
    5                     | MODULE_PREAMBLE_RULE IMPORT_DECLARATION

    6 PACKAGE_DECLARATION: PACKAGE MODULE_PATH ';'

    7 MODULE_DECLARATION: MODULE MODULE_PATH ';'

    8 IMPORT_DECLARATION: IMPORT MODULE_PATH IMPORT_ALIAS_OPT ';'

    9 MODULE_PATH: IDENTIFIER
   10            | MODULE_PATH '.' IDENTIFIER

   11 IMPORT_ALIAS_OPT: ε
   12                 | AS IDENTIFIER

   13 FUNCTION_LIST_RULE: FUNCTION_LIST_RULE FUNCTION_RULE ';'
   14                   | ε

   15 FUNCTION_RULE: DEF ShortType IDENTIFIER '(' FUNCTION_PARAMETER_LIST_RULE ')' STATEMENT_BLOCK_RULE

   16 FUNCTION_PARAMETER_LIST_RULE: DECLARATION_STATEMENT_LIST_RULE
   17                             | ε

   18 DECLARATION_STATEMENT_LIST_RULE: DECLARATION_STATEMENT_LIST_RULE DECLARATION_STATEMENT_RULE ';'
   19                                | DECLARATION_STATEMENT_RULE ';'

   20 ShortType: INT
   21          | FLOAT
   22          | DOUBLE
   23          | STRING
   24          | VOID
   25          | BOOL

   26 DECLARATION_STATEMENT_RULE: ShortType DECLARATION_VARIABLE_LIST_RULE

   27 DECLARATION_VARIABLE_LIST_RULE: DECLARATION_VARIABLE_LIST_RULE ',' IDENTIFIER
   28                               | DECLARATION_VARIABLE_LIST_RULE ',' IDENTIFIER '[' INT_LITERAL ']'
   29                               | IDENTIFIER
   30                               | IDENTIFIER '[' INT_LITERAL ']'
   31                               | ε

   32 LOGIC_BLOCK: TOP_LEVEL_STATEMENT_LIST_RULE

   33 TOP_LEVEL_STATEMENT_LIST_RULE: TOP_LEVEL_STATEMENT_LIST_RULE EXECUTABLE_STATEMENT_RULE
   34                              | EXECUTABLE_STATEMENT_RULE

   35 STATEMENT_BLOCK_RULE: '{' STATEMENT_LIST_RULE '}'

   36 STATEMENT_LIST_RULE: STATEMENT_LIST_RULE STATEMENT_RULE
   37                    | STATEMENT_RULE

   38 STATEMENT_RULE: EXECUTABLE_STATEMENT_RULE
   39               | DECLARATION_STATEMENT_RULE ';'

   40 EXECUTABLE_STATEMENT_RULE: MODEL_DECLARATION
   41                          | TENSOR_DECLARATION
   42                          | GREENAI_CONTRACT
   43                          | GREENAI_MEASUREMENT
   44                          | C3ECO_DECLARATION
   45                          | INFER_STATEMENT
   46                          | RETURN_STATEMENT
   47                          | CONTINUE ';'
   48                          | EXPRESSION_RULE ';'
   49                          | VARIABLE_RULE '=' EXPRESSION_RULE ';'
   50                          | STATEMENT_BLOCK_RULE
   51                          | IF EXPRESSION_RULE STATEMENT_BLOCK_RULE
   52                          | IF EXPRESSION_RULE STATEMENT_BLOCK_RULE ELSE STATEMENT_BLOCK_RULE
   53                          | LOOP VARIABLE_RULE '=' EXPRESSION_RULE ',' EXPRESSION_RULE STATEMENT_BLOCK_RULE
   54                          | LOOP VARIABLE_RULE '=' EXPRESSION_RULE ',' EXPRESSION_RULE ',' EXPRESSION_RULE STATEMENT_BLOCK_RULE
   55                          | LOOP EXPRESSION_RULE STATEMENT_BLOCK_RULE
   56                          | GOTO IDENTIFIER ';'
   57                          | GOTO IDENTIFIER IF EXPRESSION_RULE ';'
   58                          | READ READ_VARIABLE_LIST_RULE ';'
   59                          | BREAK ';'
   60                          | PRINT PRINT_VARIABLE_LIST_RULE ';'
   61                          | GREENAI_REPORT_RULE ';'
   62                          | AI_INFER_RULE ';'
   63                          | IDENTIFIER ':'
   64                          | ';'

   65 RETURN_STATEMENT: RETURN EXPRESSION_RULE ';'
   66                 | RETURN ';'

   67 INFER_STATEMENT: INFER IDENTIFIER '(' IDENTIFIER ')' ARROW IDENTIFIER ';'
   68                | INFER IDENTIFIER '(' IDENTIFIER ')' GREATER IDENTIFIER ';'

   69 TENSOR_DECLARATION: TENSOR IDENTIFIER PRECISION_NAME STRING_LITERAL ';'

   70 $@1: ε

   71 MODEL_DECLARATION: MODEL IDENTIFIER '{' $@1 MODEL_FIELD_LIST '}' ';'

   72 MODEL_FIELD_LIST: MODEL_FIELD_LIST MODEL_FIELD
   73                 | ε

   74 MODEL_FIELD: FORMAT FORMAT_NAME ';'
   75            | PATH STRING_LITERAL ';'
   76            | TASK STRING_LITERAL ';'
   77            | PRECISION PRECISION_NAME ';'
   78            | INPUT_SHAPE STRING_LITERAL ';'
   79            | OUTPUT_SHAPE STRING_LITERAL ';'
   80            | BACKEND_PREFERENCE BACKEND_LIST ';'
   81            | COMPACT TRUE ';'
   82            | COMPACT FALSE ';'
   83            | QUALITY_GUARDRAIL IDENTIFIER GREATER_OR_EQUAL INT_LITERAL ';'

   84 BACKEND_LIST: BACKEND_LIST ',' BACKEND_NAME
   85             | BACKEND_NAME

   86 $@2: ε

   87 GREENAI_CONTRACT: GREENAI_CONTRACT_T IDENTIFIER '{' $@2 CONTRACT_FIELD_LIST '}' ';'

   88 CONTRACT_FIELD_LIST: CONTRACT_FIELD_LIST CONTRACT_FIELD
   89                    | ε

   90 CONTRACT_FIELD: FUNCTIONAL_UNIT STRING_LITERAL ';'
   91               | SUCCESS_CRITERIA STRING_LITERAL ';'
   92               | BOUNDARY BOUNDARY_LIST ';'
   93               | MEASUREMENT_QUALITY MQ_NAME ';'
   94               | DATA_QUALITY DQ_NAME ';'
   95               | CARBON_FACTOR LOCATION INT_LITERAL ';'
   96               | ENERGY_BUDGET_J INT_LITERAL ';'
   97               | CARBON_BUDGET_GCO2E INT_LITERAL ';'
   98               | QUALITY_GUARDRAIL IDENTIFIER GREATER_OR_EQUAL INT_LITERAL ';'
   99               | EVIDENCE_RETENTION STRING_LITERAL ';'
  100               | CLAIMS_MODE EVIDENCE_ONLY ';'

  101 BOUNDARY_LIST: BOUNDARY_LIST ',' BOUNDARY_NAME
  102              | BOUNDARY_NAME

  103 $@3: ε

  104 GREENAI_MEASUREMENT: GREENAI_MEASURE IDENTIFIER '{' $@3 MEASURE_FIELD_LIST '}' ';'

  105 MEASURE_FIELD_LIST: MEASURE_FIELD_LIST MEASURE_FIELD
  106                   | ε

  107 MEASURE_FIELD: IDENTIFIER INT_LITERAL ';'
  108              | IDENTIFIER IDENTIFIER ';'

  109 $@4: ε

  110 C3ECO_DECLARATION: CERTIFICATION_PROFILE IDENTIFIER '{' $@4 C3ECO_FIELD_LIST '}' ';'

  111 $@5: ε

  112 C3ECO_DECLARATION: CERTIFICATION IDENTIFIER '{' $@5 C3ECO_FIELD_LIST '}' ';'

  113 $@6: ε

  114 C3ECO_DECLARATION: FUNCTIONAL_UNIT IDENTIFIER '{' $@6 C3ECO_FIELD_LIST '}' ';'

  115 $@7: ε

  116 C3ECO_DECLARATION: WORKLOAD IDENTIFIER '{' $@7 C3ECO_FIELD_LIST '}' ';'

  117 $@8: ε

  118 C3ECO_DECLARATION: BOUNDARY IDENTIFIER '{' $@8 C3ECO_FIELD_LIST '}' ';'

  119 $@9: ε

  120 C3ECO_DECLARATION: MEASUREMENT_PLAN IDENTIFIER '{' $@9 C3ECO_FIELD_LIST '}' ';'

  121 $@10: ε

  122 C3ECO_DECLARATION: AI_LIFECYCLE IDENTIFIER '{' $@10 C3ECO_FIELD_LIST '}' ';'

  123 $@11: ε

  124 C3ECO_DECLARATION: RAG_PIPELINE IDENTIFIER '{' $@11 C3ECO_FIELD_LIST '}' ';'

  125 $@12: ε

  126 C3ECO_DECLARATION: TOKEN_BUDGET IDENTIFIER '{' $@12 C3ECO_FIELD_LIST '}' ';'

  127 $@13: ε

  128 C3ECO_DECLARATION: MODEL_ROUTING IDENTIFIER '{' $@13 C3ECO_FIELD_LIST '}' ';'

  129 $@14: ε

  130 C3ECO_DECLARATION: GUARDRAILS IDENTIFIER '{' $@14 C3ECO_FIELD_LIST '}' ';'

  131 C3ECO_FIELD_LIST: C3ECO_FIELD_LIST C3ECO_FIELD
  132                 | ε

  133 C3ECO_FIELD: C3ECO_FIELD_NAME STRING_LITERAL ';'
  134            | C3ECO_FIELD_NAME C3ECO_IDENTIFIER_VALUE ';'
  135            | C3ECO_FIELD_NAME INT_LITERAL ';'
  136            | C3ECO_FIELD_NAME FLOAT_LITERAL ';'
  137            | C3ECO_FIELD_NAME TRUE ';'
  138            | C3ECO_FIELD_NAME FALSE ';'

  139 C3ECO_FIELD_NAME: IDENTIFIER
  140                 | CARBON_FACTOR
  141                 | FALLBACK
  142                 | QUALITY_GUARDRAIL
  143                 | FUNCTIONAL_UNIT
  144                 | BOUNDARY

  145 C3ECO_IDENTIFIER_VALUE: IDENTIFIER
  146                       | BOUNDARY_NAME
  147                       | MQ_NAME
  148                       | DQ_NAME
  149                       | LOCATION
  150                       | EVIDENCE_ONLY
  151                       | FALLBACK

  152 FORMAT_NAME: ONNX
  153            | ENGINE
  154            | TORCHSCRIPT
  155            | OPENVINO_IR
  156            | GGUF

  157 PRECISION_NAME: INT8
  158               | INT4
  159               | FP16
  160               | FP32
  161               | BF16
  162               | FP64
  163               | FLOAT

  164 BACKEND_NAME: TENSORRT
  165             | ONNXRUNTIME_TENSORRT
  166             | ONNXRUNTIME_CUDA
  167             | ONNXRUNTIME_CPU
  168             | OPENVINO
  169             | LIBTORCH
  170             | LLAMACPP
  171             | FALLBACK

  172 MQ_NAME: MQ1
  173        | MQ2
  174        | MQ3
  175        | MQ4

  176 DQ_NAME: DQ1
  177        | DQ2
  178        | DQ3
  179        | DQ4

  180 BOUNDARY_NAME: COMPUTE
  181              | ACCELERATOR
  182              | STORAGE
  183              | NETWORK
  184              | CI_CD
  185              | THIRDPARTY

  186 AI_INFER_RULE: AI_INFER_BUILTIN '(' STRING_LITERAL ',' STRING_LITERAL ',' STRING_LITERAL ')'

  187 GREENAI_REPORT_RULE: GREENAI_REPORT_BUILTIN '(' STRING_LITERAL ',' EXPRESSION_RULE ',' EXPRESSION_RULE ',' EXPRESSION_RULE ')'

  188 EXPRESSION_RULE: EXPRESSION_RULE '+' EXPRESSION_RULE
  189                | EXPRESSION_RULE '-' EXPRESSION_RULE
  190                | EXPRESSION_RULE '*' EXPRESSION_RULE
  191                | EXPRESSION_RULE '/' EXPRESSION_RULE
  192                | EXPRESSION_RULE '%' EXPRESSION_RULE
  193                | EXPRESSION_RULE LESS EXPRESSION_RULE
  194                | EXPRESSION_RULE LESS_OR_EQUAL EXPRESSION_RULE
  195                | EXPRESSION_RULE GREATER EXPRESSION_RULE
  196                | EXPRESSION_RULE GREATER_OR_EQUAL EXPRESSION_RULE
  197                | EXPRESSION_RULE EQUAL EXPRESSION_RULE
  198                | EXPRESSION_RULE NOT_EQUAL EXPRESSION_RULE
  199                | EXPRESSION_RULE OR EXPRESSION_RULE
  200                | EXPRESSION_RULE AND EXPRESSION_RULE
  201                | '-' EXPRESSION_RULE
  202                | '(' EXPRESSION_RULE ')'
  203                | IDENTIFIER '(' EXPRESSION_LIST_OPT ')'
  204                | VARIABLE_RULE
  205                | INT_LITERAL
  206                | FLOAT_LITERAL
  207                | STRING_LITERAL
  208                | TRUE
  209                | FALSE

  210 EXPRESSION_LIST_OPT: EXPRESSION_LIST_RULE
  211                    | ε

  212 EXPRESSION_LIST_RULE: EXPRESSION_LIST_RULE ',' EXPRESSION_RULE
  213                     | EXPRESSION_RULE

  214 VARIABLE_RULE: IDENTIFIER
  215              | IDENTIFIER '[' EXPRESSION_RULE ']'

  216 READ_VARIABLE_LIST_RULE: READ_VARIABLE_LIST_RULE ',' VARIABLE_RULE
  217                        | VARIABLE_RULE

  218 PRINT_VARIABLE_LIST_RULE: PRINT_VARIABLE_LIST_RULE ',' EXPRESSION_RULE
  219                         | EXPRESSION_RULE


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 192
    '(' (40) 15 67 68 186 187 202 203
    ')' (41) 15 67 68 186 187 202 203
    '*' (42) 190
    '+' (43) 188
    ',' (44) 27 28 53 54 84 101 186 187 212 216 218
    '-' (45) 189 201
    '.' (46) 10
    '/' (47) 191
    ':' (58) 63
    ';' (59) 6 7 8 13 18 19 39 47 48 49 56 57 58 59 60 61 62 64 65 66 67 68 69 71 74 75 76 77 78 79 80 81 82 83 87 90 91 92 93 94 95 96 97 98 99 100 104 107 108 110 112 114 116 118 120 122 124 126 128 130 133 134 135 136 137 138
    '=' (61) 49 53 54
    '[' (91) 28 30 215
    ']' (93) 28 30 215
    '{' (123) 35 71 87 104 110 112 114 116 118 120 122 124 126 128 130
    '}' (125) 35 71 87 104 110 112 114 116 118 120 122 124 126 128 130
    error (256)
    ETOK (258)
    OR (259) 199
    AND (260) 200
    EQUAL (261) 197
    NOT_EQUAL (262) 198
    LESS (263) 193
    LESS_OR_EQUAL (264) 194
    GREATER (265) 68 195
    GREATER_OR_EQUAL (266) 83 98 196
    ARROW (267) 67
    UMINUS (268)
    STRING_LITERAL <string_val> (269) 69 75 76 78 79 90 91 99 133 186 187 207
    IDENTIFIER <string_val> (270) 9 10 12 15 27 28 29 30 56 57 63 67 68 69 71 83 87 98 104 107 108 110 112 114 116 118 120 122 124 126 128 130 139 145 203 214 215
    AI_INFER_BUILTIN <string_val> (271) 186
    GREENAI_REPORT_BUILTIN <string_val> (272) 187
    INT_LITERAL <int_val> (273) 28 30 83 95 96 97 98 107 135 205
    FLOAT_LITERAL <float_val> (274) 136 206
    READ (275) 58
    PRINT (276) 60
    GOTO (277) 56 57
    BREAK <break_statement> (278) 59
    WHILE (279)
    LOOP (280) 53 54 55
    ELSE (281) 52
    IF (282) 51 52 57
    DEF (283) 15
    INT (284) 20
    FLOAT (285) 21 163
    STRING (286) 23
    VOID (287) 24
    BOOL (288) 25
    DOUBLE (289) 22
    RETURN (290) 65 66
    CONTINUE (291) 47
    TRUE (292) 81 137 208
    FALSE (293) 82 138 209
    PACKAGE (294) 6
    MODULE (295) 7
    IMPORT (296) 8
    AS (297) 12
    MODEL (298) 71
    FORMAT (299) 74
    PATH (300) 75
    TASK (301) 76
    PRECISION (302) 77
    INPUT_SHAPE (303) 78
    OUTPUT_SHAPE (304) 79
    BACKEND_PREFERENCE (305) 80
    COMPACT (306) 81 82
    QUALITY_GUARDRAIL (307) 83 98 142
    GREENAI_CONTRACT_T (308) 87
    FUNCTIONAL_UNIT (309) 90 114 143
    SUCCESS_CRITERIA (310) 91
    BOUNDARY (311) 92 118 144
    MEASUREMENT_QUALITY (312) 93
    DATA_QUALITY (313) 94
    CARBON_FACTOR (314) 95 140
    ENERGY_BUDGET_J (315) 96
    CARBON_BUDGET_GCO2E (316) 97
    EVIDENCE_RETENTION (317) 99
    CLAIMS_MODE (318) 100
    EVIDENCE_ONLY (319) 100 150
    GREENAI_MEASURE (320) 104
    INFER (321) 67 68
    TENSOR (322) 69
    CERTIFICATION_PROFILE (323) 110
    CERTIFICATION (324) 112
    WORKLOAD (325) 116
    MEASUREMENT_PLAN (326) 120
    AI_LIFECYCLE (327) 122
    RAG_PIPELINE (328) 124
    TOKEN_BUDGET (329) 126
    MODEL_ROUTING (330) 128
    GUARDRAILS (331) 130
    INT8 (332) 157
    FP16 (333) 159
    FP32 (334) 160
    BF16 (335) 161
    INT4 (336) 158
    FP64 (337) 162
    ONNX (338) 152
    ENGINE (339) 153
    TORCHSCRIPT (340) 154
    OPENVINO_IR (341) 155
    GGUF (342) 156
    TENSORRT (343) 164
    ONNXRUNTIME_TENSORRT (344) 165
    ONNXRUNTIME_CUDA (345) 166
    ONNXRUNTIME_CPU (346) 167
    OPENVINO (347) 168
    LIBTORCH (348) 169
    LLAMACPP (349) 170
    FALLBACK (350) 141 151 171
    MQ1 (351) 172
    MQ2 (352) 173
    MQ3 (353) 174
    MQ4 (354) 175
    DQ1 (355) 176
    DQ2 (356) 177
    DQ3 (357) 178
    DQ4 (358) 179
    LOCATION (359) 95 149
    CI_CD (360) 184
    THIRDPARTY (361) 185
    ACCELERATOR (362) 181
    COMPUTE (363) 180
    STORAGE (364) 182
    NETWORK (365) 183


Nonterminals, with rules where they appear

    $accept (127)
        on left: 0
    PROGRAMME_RULE <program> (128)
        on left: 1
        on right: 0
    MODULE_PREAMBLE_RULE (129)
        on left: 2 3 4 5
        on right: 1 3 4 5
    PACKAGE_DECLARATION (130)
        on left: 6
        on right: 3
    MODULE_DECLARATION (131)
        on left: 7
        on right: 4
    IMPORT_DECLARATION (132)
        on left: 8
        on right: 5
    MODULE_PATH (133)
        on left: 9 10
        on right: 6 7 8 10
    IMPORT_ALIAS_OPT (134)
        on left: 11 12
        on right: 8
    FUNCTION_LIST_RULE <functions> (135)
        on left: 13 14
        on right: 1 13
    FUNCTION_RULE <function> (136)
        on left: 15
        on right: 13
    FUNCTION_PARAMETER_LIST_RULE <decl_block> (137)
        on left: 16 17
        on right: 15
    DECLARATION_STATEMENT_LIST_RULE <decl_block> (138)
        on left: 18 19
        on right: 1 16 18
    ShortType <type> (139)
        on left: 20 21 22 23 24 25
        on right: 15 26
    DECLARATION_STATEMENT_RULE <decl_block> (140)
        on left: 26
        on right: 18 19 39
    DECLARATION_VARIABLE_LIST_RULE <decl_block> (141)
        on left: 27 28 29 30 31
        on right: 26 27 28
    LOGIC_BLOCK <code_block> (142)
        on left: 32
        on right: 1
    TOP_LEVEL_STATEMENT_LIST_RULE <block_statement> (143)
        on left: 33 34
        on right: 32 33
    STATEMENT_BLOCK_RULE <block_statement> (144)
        on left: 35
        on right: 15 50 51 52 53 54 55
    STATEMENT_LIST_RULE <block_statement> (145)
        on left: 36 37
        on right: 35 36
    STATEMENT_RULE <statement> (146)
        on left: 38 39
        on right: 36 37
    EXECUTABLE_STATEMENT_RULE <statement> (147)
        on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 33 34 38
    RETURN_STATEMENT <return_statement> (148)
        on left: 65 66
        on right: 46
    INFER_STATEMENT <infer_statement> (149)
        on left: 67 68
        on right: 45
    TENSOR_DECLARATION <tensor_decl> (150)
        on left: 69
        on right: 41
    MODEL_DECLARATION <model_decl> (151)
        on left: 71
        on right: 40
    $@1 (152)
        on left: 70
        on right: 71
    MODEL_FIELD_LIST (153)
        on left: 72 73
        on right: 71 72
    MODEL_FIELD (154)
        on left: 74 75 76 77 78 79 80 81 82 83
        on right: 72
    BACKEND_LIST (155)
        on left: 84 85
        on right: 80 84
    GREENAI_CONTRACT <greenai_contract> (156)
        on left: 87
        on right: 42
    $@2 (157)
        on left: 86
        on right: 87
    CONTRACT_FIELD_LIST (158)
        on left: 88 89
        on right: 87 88
    CONTRACT_FIELD (159)
        on left: 90 91 92 93 94 95 96 97 98 99 100
        on right: 88
    BOUNDARY_LIST (160)
        on left: 101 102
        on right: 92 101
    GREENAI_MEASUREMENT <greenai_measure> (161)
        on left: 104
        on right: 43
    $@3 (162)
        on left: 103
        on right: 104
    MEASURE_FIELD_LIST (163)
        on left: 105 106
        on right: 104 105
    MEASURE_FIELD (164)
        on left: 107 108
        on right: 105
    C3ECO_DECLARATION <c3eco_decl> (165)
        on left: 110 112 114 116 118 120 122 124 126 128 130
        on right: 44
    $@4 (166)
        on left: 109
        on right: 110
    $@5 (167)
        on left: 111
        on right: 112
    $@6 (168)
        on left: 113
        on right: 114
    $@7 (169)
        on left: 115
        on right: 116
    $@8 (170)
        on left: 117
        on right: 118
    $@9 (171)
        on left: 119
        on right: 120
    $@10 (172)
        on left: 121
        on right: 122
    $@11 (173)
        on left: 123
        on right: 124
    $@12 (174)
        on left: 125
        on right: 126
    $@13 (175)
        on left: 127
        on right: 128
    $@14 (176)
        on left: 129
        on right: 130
    C3ECO_FIELD_LIST (177)
        on left: 131 132
        on right: 110 112 114 116 118 120 122 124 126 128 130 131
    C3ECO_FIELD (178)
        on left: 133 134 135 136 137 138
        on right: 131
    C3ECO_FIELD_NAME <string_val> (179)
        on left: 139 140 141 142 143 144
        on right: 133 134 135 136 137 138
    C3ECO_IDENTIFIER_VALUE <string_val> (180)
        on left: 145 146 147 148 149 150 151
        on right: 134
    FORMAT_NAME <string_val> (181)
        on left: 152 153 154 155 156
        on right: 74
    PRECISION_NAME <string_val> (182)
        on left: 157 158 159 160 161 162 163
        on right: 69 77
    BACKEND_NAME <string_val> (183)
        on left: 164 165 166 167 168 169 170 171
        on right: 84 85
    MQ_NAME <string_val> (184)
        on left: 172 173 174 175
        on right: 93 147
    DQ_NAME <string_val> (185)
        on left: 176 177 178 179
        on right: 94 148
    BOUNDARY_NAME <string_val> (186)
        on left: 180 181 182 183 184 185
        on right: 101 102 146
    AI_INFER_RULE <ai_infer> (187)
        on left: 186
        on right: 62
    GREENAI_REPORT_RULE <greenai_report> (188)
        on left: 187
        on right: 61
    EXPRESSION_RULE <expression> (189)
        on left: 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209
        on right: 48 49 51 52 53 54 55 57 65 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 212 213 215 218 219
    EXPRESSION_LIST_OPT <expression_list> (190)
        on left: 210 211
        on right: 203
    EXPRESSION_LIST_RULE <expression_list> (191)
        on left: 212 213
        on right: 210 212
    VARIABLE_RULE <variable> (192)
        on left: 214 215
        on right: 49 53 54 204 216 217
    READ_VARIABLE_LIST_RULE <read_statement> (193)
        on left: 216 217
        on right: 58 216
    PRINT_VARIABLE_LIST_RULE <print_statement> (194)
        on left: 218 219
        on right: 60 218


State 0

    0 $accept: • PROGRAMME_RULE $end

    $default  reduce using rule 2 (MODULE_PREAMBLE_RULE)

    PROGRAMME_RULE        go to state 1
    MODULE_PREAMBLE_RULE  go to state 2


State 1

    0 $accept: PROGRAMME_RULE • $end

    $end  shift, and go to state 3


State 2

    1 PROGRAMME_RULE: MODULE_PREAMBLE_RULE • DECLARATION_STATEMENT_LIST_RULE FUNCTION_LIST_RULE LOGIC_BLOCK
    3 MODULE_PREAMBLE_RULE: MODULE_PREAMBLE_RULE • PACKAGE_DECLARATION
    4                     | MODULE_PREAMBLE_RULE • MODULE_DECLARATION
    5                     | MODULE_PREAMBLE_RULE • IMPORT_DECLARATION

    INT      shift, and go to state 4
    FLOAT    shift, and go to state 5
    STRING   shift, and go to state 6
    VOID     shift, and go to state 7
    BOOL     shift, and go to state 8
    DOUBLE   shift, and go to state 9
    PACKAGE  shift, and go to state 10
    MODULE   shift, and go to state 11
    IMPORT   shift, and go to state 12

    PACKAGE_DECLARATION              go to state 13
    MODULE_DECLARATION               go to state 14
    IMPORT_DECLARATION               go to state 15
    DECLARATION_STATEMENT_LIST_RULE  go to state 16
    ShortType                        go to state 17
    DECLARATION_STATEMENT_RULE       go to state 18


State 3

    0 $accept: PROGRAMME_RULE $end •

    $default  accept


State 4

   20 ShortType: INT •

    $default  reduce using rule 20 (ShortType)


State 5

   21 ShortType: FLOAT •

    $default  reduce using rule 21 (ShortType)


State 6

   23 ShortType: STRING •

    $default  reduce using rule 23 (ShortType)


State 7

   24 ShortType: VOID •

    $default  reduce using rule 24 (ShortType)


State 8

   25 ShortType: BOOL •

    $default  reduce using rule 25 (ShortType)


State 9

   22 ShortType: DOUBLE •

    $default  reduce using rule 22 (ShortType)


State 10

    6 PACKAGE_DECLARATION: PACKAGE • MODULE_PATH ';'

    IDENTIFIER  shift, and go to state 19

    MODULE_PATH  go to state 20


State 11

    7 MODULE_DECLARATION: MODULE • MODULE_PATH ';'

    IDENTIFIER  shift, and go to state 19

    MODULE_PATH  go to state 21


State 12

    8 IMPORT_DECLARATION: IMPORT • MODULE_PATH IMPORT_ALIAS_OPT ';'

    IDENTIFIER  shift, and go to state 19

    MODULE_PATH  go to state 22


State 13

    3 MODULE_PREAMBLE_RULE: MODULE_PREAMBLE_RULE PACKAGE_DECLARATION •

    $default  reduce using rule 3 (MODULE_PREAMBLE_RULE)


State 14

    4 MODULE_PREAMBLE_RULE: MODULE_PREAMBLE_RULE MODULE_DECLARATION •

    $default  reduce using rule 4 (MODULE_PREAMBLE_RULE)


State 15

    5 MODULE_PREAMBLE_RULE: MODULE_PREAMBLE_RULE IMPORT_DECLARATION •

    $default  reduce using rule 5 (MODULE_PREAMBLE_RULE)


State 16

    1 PROGRAMME_RULE: MODULE_PREAMBLE_RULE DECLARATION_STATEMENT_LIST_RULE • FUNCTION_LIST_RULE LOGIC_BLOCK
   18 DECLARATION_STATEMENT_LIST_RULE: DECLARATION_STATEMENT_LIST_RULE • DECLARATION_STATEMENT_RULE ';'

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    STRING  shift, and go to state 6
    VOID    shift, and go to state 7
    BOOL    shift, and go to state 8
    DOUBLE  shift, and go to state 9

    $default  reduce using rule 14 (FUNCTION_LIST_RULE)

    FUNCTION_LIST_RULE          go to state 23
    ShortType                   go to state 17
    DECLARATION_STATEMENT_RULE  go to state 24


State 17

   26 DECLARATION_STATEMENT_RULE: ShortType • DECLARATION_VARIABLE_LIST_RULE

    IDENTIFIER  shift, and go to state 25

    $default  reduce using rule 31 (DECLARATION_VARIABLE_LIST_RULE)

    DECLARATION_VARIABLE_LIST_RULE  go to state 26


State 18

   19 DECLARATION_STATEMENT_LIST_RULE: DECLARATION_STATEMENT_RULE • ';'

    ';'  shift, and go to state 27


State 19

    9 MODULE_PATH: IDENTIFIER •

    $default  reduce using rule 9 (MODULE_PATH)


State 20

    6 PACKAGE_DECLARATION: PACKAGE MODULE_PATH • ';'
   10 MODULE_PATH: MODULE_PATH • '.' IDENTIFIER

    ';'  shift, and go to state 28
    '.'  shift, and go to state 29


State 21

    7 MODULE_DECLARATION: MODULE MODULE_PATH • ';'
   10 MODULE_PATH: MODULE_PATH • '.' IDENTIFIER

    ';'  shift, and go to state 30
    '.'  shift, and go to state 29


State 22

    8 IMPORT_DECLARATION: IMPORT MODULE_PATH • IMPORT_ALIAS_OPT ';'
   10 MODULE_PATH: MODULE_PATH • '.' IDENTIFIER

    AS   shift, and go to state 31
    '.'  shift, and go to state 29

    $default  reduce using rule 11 (IMPORT_ALIAS_OPT)

    IMPORT_ALIAS_OPT  go to state 32


State 23

    1 PROGRAMME_RULE: MODULE_PREAMBLE_RULE DECLARATION_STATEMENT_LIST_RULE FUNCTION_LIST_RULE • LOGIC_BLOCK
   13 FUNCTION_LIST_RULE: FUNCTION_LIST_RULE • FUNCTION_RULE ';'

    '-'                     shift, and go to state 33
    STRING_LITERAL          shift, and go to state 34
    IDENTIFIER              shift, and go to state 35
    AI_INFER_BUILTIN        shift, and go to state 36
    GREENAI_REPORT_BUILTIN  shift, and go to state 37
    INT_LITERAL             shift, and go to state 38
    FLOAT_LITERAL           shift, and go to state 39
    READ                    shift, and go to state 40
    PRINT                   shift, and go to state 41
    GOTO                    shift, and go to state 42
    BREAK                   shift, and go to state 43
    LOOP                    shift, and go to state 44
    IF                      shift, and go to state 45
    DEF                     shift, and go to state 46
    RETURN                  shift, and go to state 47
    CONTINUE                shift, and go to state 48
    TRUE                    shift, and go to state 49
    FALSE                   shift, and go to state 50
    MODEL                   shift, and go to state 51
    GREENAI_CONTRACT_T      shift, and go to state 52
    FUNCTIONAL_UNIT         shift, and go to state 53
    BOUNDARY                shift, and go to state 54
    GREENAI_MEASURE         shift, and go to state 55
    INFER                   shift, and go to state 56
    TENSOR                  shift, and go to state 57
    CERTIFICATION_PROFILE   shift, and go to state 58
    CERTIFICATION           shift, and go to state 59
    WORKLOAD                shift, and go to state 60
    MEASUREMENT_PLAN        shift, and go to state 61
    AI_LIFECYCLE            shift, and go to state 62
    RAG_PIPELINE            shift, and go to state 63
    TOKEN_BUDGET            shift, and go to state 64
    MODEL_ROUTING           shift, and go to state 65
    GUARDRAILS              shift, and go to state 66
    ';'                     shift, and go to state 67
    '('                     shift, and go to state 68
    '{'                     shift, and go to state 69

    FUNCTION_RULE                  go to state 70
    LOGIC_BLOCK                    go to state 71
    TOP_LEVEL_STATEMENT_LIST_RULE  go to state 72
    STATEMENT_BLOCK_RULE           go to state 73
    EXECUTABLE_STATEMENT_RULE      go to state 74
    RETURN_STATEMENT               go to state 75
    INFER_STATEMENT                go to state 76
    TENSOR_DECLARATION             go to state 77
    MODEL_DECLARATION              go to state 78
    GREENAI_CONTRACT               go to state 79
    GREENAI_MEASUREMENT            go to state 80
    C3ECO_DECLARATION              go to state 81
    AI_INFER_RULE                  go to state 82
    GREENAI_REPORT_RULE            go to state 83
    EXPRESSION_RULE                go to state 84
    VARIABLE_RULE                  go to state 85


State 24

   18 DECLARATION_STATEMENT_LIST_RULE: DECLARATION_STATEMENT_LIST_RULE DECLARATION_STATEMENT_RULE • ';'

    ';'  shift, and go to state 86


State 25

   29 DECLARATION_VARIABLE_LIST_RULE: IDENTIFIER •
   30                               | IDENTIFIER • '[' INT_LITERAL ']'

    '['  shift, and go to state 87
